--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -198,9 +198,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Extend.svg&amp;filetimestamp=20240101091319&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Extend.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Extend.html" title="Sketcher Extend">Prodlou&#382;it hranu</a>: Prodlou&#382;&iacute; nebo zkr&aacute;t&iacute; p&#345;&iacute;mku nebo oblouk na libovoln&eacute; m&iacute;sto nebo na c&iacute;lovou hranu &#269;i bod.</li></ul></dd></dl>
 <ul><li><span id="Sketcher_CompExternal"><span typeof="mw:File"><a href="../index.php?title=Sketcher_Projection.svg&amp;filetimestamp=20241129200338&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Projection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Toolbar_flyout_arrow_blue_background.svg&amp;filetimestamp=20221006081506&amp;.html" class="mw-file-description"><img src="../File/Toolbar_flyout_arrow_blue_background.svg" decoding="async" width="16" height="32" class="mw-file-element" data-file-width="32" data-file-height="64"></a></span> Extern&iacute; geometrie:</span></li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Projection.svg&amp;filetimestamp=20241129200338&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Projection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Projection.html" title="Sketcher Projection">Extern&iacute; projekce</a>: Vytvo&#345;&iacute; hrany projekce vn&#283;j&scaron;&iacute; geometrie. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Intersection.svg&amp;filetimestamp=20241129200334&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Intersection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Intersection.html" title="Sketcher Intersection">External Intersection</a>: Creates the intersection edges of external geometry with the sketch plane. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
-</div>
+<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Intersection.svg&amp;filetimestamp=20241129200334&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Intersection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Intersection.html" title="Sketcher Intersection">Extern&iacute; pr&#367;se&#269;&iacute;k</a>: Vytvo&#345;&iacute; pr&#367;se&#269;&iacute;ky hran vn&#283;j&scaron;&iacute; geometrie s rovinou n&aacute;&#269;rtu. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CarbonCopy.svg&amp;filetimestamp=20240719181043&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CarbonCopy.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CarbonCopy.html" title="Sketcher CarbonCopy">Carbon Copy</a>: Copies all geometry and constraints from another sketch into the active sketch.</li></ul>
 </div>
@@ -630,13 +628,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118125613
+Cached time: 20260118125712
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.508 seconds
-Real time usage: 1.201 seconds
-Preprocessor visited node count: 1466/1000000
+CPU time usage: 0.465 seconds
+Real time usage: 0.778 seconds
+Preprocessor visited node count: 1465/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -646,19 +644,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   58.157      1 -total
- 21.65%   12.589      1 Template:Sketcher_Tools_navi/cs
- 12.38%    7.200      1 Template:PropertyView
- 10.93%    6.357      1 Template:Userdocnavi/cs
-  9.98%    5.806      2 Template:Navigation_menu_2
-  8.66%    5.038      6 Template:Caption
-  7.21%    4.191     34 Template:Version
-  6.85%    3.983      2 Template:Docnav
-  6.24%    3.629      5 Template:MenuCommand
-  5.95%    3.458      8 Template:VersionPlus
+100.00%   80.751      1 -total
+ 37.63%   30.385      1 Template:Sketcher_Tools_navi/cs
+ 25.28%   20.415      2 Template:Navigation_menu_2
+ 16.89%   13.635      1 Template:PropertyView
+ 14.20%   11.470      1 Template:Variable
+ 14.11%   11.397      1 Template:Userdocnavi/cs
+  4.99%    4.029      2 Template:Docnav
+  4.27%    3.449      1 Template:TOCright
+  3.74%    3.018      6 Template:Caption
+  3.28%    2.649     34 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118125612 and revision id 1740491. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118125711 and revision id 1740497. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
