--- a/wiki/it/Mesh_Export.html
+++ b/wiki/it/Mesh_Export.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Mesh Export/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Mesh+Export&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/Mesh_Export.html" class="mw-pt-progress mw-pt-progress--complete" title="Mesh Exportieren (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Mesh_Export.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Mesh Export (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Mesh_Export.html" class="mw-pt-progress mw-pt-progress--high" title="Mesh Exporter un maillage (85% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Mesh_Export.html" class="mw-pt-progress mw-pt-progress--complete" title="Mesh Exporter un maillage (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../hu/Mesh_Export.html" class="mw-pt-progress mw-pt-progress--low" title="H&aacute;l&oacute; export&aacute;l&aacute;sa (8% translated)" lang="hu" dir="ltr">magyar</a></li>
 <li><a href="../pl/Mesh_Export.html" class="mw-pt-progress mw-pt-progress--complete" title="Siatka: Eksport (100% translated)" lang="pl" dir="ltr">polski</a></li>
@@ -14,7 +14,6 @@
     <div><a href="../it/Mesh_Workbench.html" title="Mesh Workbench/it">Mesh</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_Mesh.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -25,7 +24,7 @@
 <th class="ctOdd">Posizione nel menu
 </th></tr>
 <tr>
-<td class="ctEven">Mesh &rarr; Esporta mesh...
+<td class="ctEven">Mesh &rarr; Esporta Mesh...
 </td></tr>
 <tr>
 <th class="ctOdd">Ambiente
@@ -54,7 +53,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
@@ -65,12 +63,12 @@
 <div class="mw-translate-fuzzy">
 <ol><li>Selezionare un singolo oggetto mesh.</li>
 <li>Esistono diversi modi per invocare il comando:
-<ul><li>Premere il pulsante <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.4em; padding: 0px 10px 1px 10px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Mesh_Export.svg&amp;filetimestamp=20200625160326&amp;.html" class="mw-file-description"><img src="../File/Mesh_Export.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Esporta mesh...</a></span>.</li>
+<ul><li>Premere il pulsante <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Mesh_Export.svg&amp;filetimestamp=20200625160326&amp;.html" class="mw-file-description"><img src="../File/Mesh_Export.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Esporta mesh...</a></span>.</li>
 <li>Selezionare l'opzione <b>Mesh &rarr; <span typeof="mw:File"><a href="../index.php?title=Mesh_Export.svg&amp;filetimestamp=20200625160326&amp;.html" class="mw-file-description"><img src="../File/Mesh_Export.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Esporta mesh...</b> dal menu.</li>
 <li>Selezionare l'opzione <b><span typeof="mw:File"><a href="../index.php?title=Mesh_Export.svg&amp;filetimestamp=20200625160326&amp;.html" class="mw-file-description"><img src="../File/Mesh_Export.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Esporta mesh...</b> dal menu contestuale della <a href="../it/Tree_view.html" class="mw-redirect" title="Tree view/it">vista ad albero</a> o della <a href="../it/3D_view.html" class="mw-redirect" title="3D view/it">vista 3D</a>.</li></ul></li>
 <li>Selezionare il formato file corretto nella finestra di dialogo.</li>
 <li>Inserisci un nome file. Se nel passaggio precedente &egrave; stata selezionata l'opzione <code>Tutti i file (*.*)</code> e non si specifica un'estensione di file, viene utilizzata l'estensione <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">.stl</span>.</li>
-<li>Premere il pulsante <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.4em; padding: 0px 10px 1px 10px; font-weight:normal;color: #202122;">Salva</span>.</li></ol>
+<li>Premere il pulsante <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Salva</span>.</li></ol>
 </div>
 <p><span id="Notes"></span>
 </p>
@@ -101,14 +99,14 @@
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_Mesh.svg&amp;filetimestamp=20200404173024&amp;.html" class="mw-file-description"><img src="../File/Workbench_Mesh.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../it/Mesh_Workbench.html" title="Mesh Workbench/it">Mesh</a>
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
-<ul><li><b>Miscellaneous:</b> <a href="../it/Mesh_Import.html" title="Mesh Import/it">Import mesh</a>, <a class="mw-selflink selflink">Export mesh</a>, <a href="../it/Mesh_FromPartShape.html" title="Mesh FromPartShape/it">Create mesh from shape</a>, <a href="../it/Mesh_BuildRegularSolid.html" title="Mesh BuildRegularSolid/it">Regular solid</a>, <a href="../it/MeshPart_CreateFlatMesh.html" title="MeshPart CreateFlatMesh/it">Unwrap Mesh</a>, <a href="../it/MeshPart_CreateFlatFace.html" title="MeshPart CreateFlatFace/it">Unwrap Face</a></li>
-<li><b>Modifying:</b> <a href="../it/Mesh_HarmonizeNormals.html" title="Mesh HarmonizeNormals/it">Harmonize normals</a>, <a href="../it/Mesh_FlipNormals.html" title="Mesh FlipNormals/it">Flip normals</a>, <a href="../it/Mesh_FillupHoles.html" title="Mesh FillupHoles/it">Fill holes</a>, <a href="../it/Mesh_FillInteractiveHole.html" title="Mesh FillInteractiveHole/it">Close hole</a>, <a href="../it/Mesh_AddFacet.html" title="Mesh AddFacet/it">Add triangle</a>, <a href="../it/Mesh_RemoveComponents.html" title="Mesh RemoveComponents/it">Remove components</a>, <a href="../it/Mesh_RemoveCompByHand.html" title="Mesh RemoveCompByHand/it">Remove components by hand</a>, <a href="../it/Mesh_Smoothing.html" title="Mesh Smoothing/it">Smooth</a>, <a href="../it/Mesh_RemeshGmsh.html" title="Mesh RemeshGmsh/it">Refinement</a>, <a href="../it/Mesh_Decimating.html" title="Mesh Decimating/it">Decimation</a>, <a href="../it/Mesh_Scale.html" title="Mesh Scale/it">Scale</a></li></ul>
+<ul><li><b>Miscellaneous:</b> <a href="../it/Mesh_Import.html" title="Mesh Import/it">Import Mesh</a>, <a class="mw-selflink selflink">Export Mesh</a>, <a href="../it/Mesh_FromPartShape.html" title="Mesh FromPartShape/it">Mesh From Shape</a>, <a href="../it/Mesh_BuildRegularSolid.html" title="Mesh BuildRegularSolid/it">Regular solid</a>, <a href="../it/MeshPart_CreateFlatMesh.html" title="MeshPart CreateFlatMesh/it">Unwrap Mesh</a>, <a href="../it/MeshPart_CreateFlatFace.html" title="MeshPart CreateFlatFace/it">Unwrap Face</a></li>
+<li><b>Modifying:</b> <a href="../it/Mesh_HarmonizeNormals.html" title="Mesh HarmonizeNormals/it">Harmonize Normals</a>, <a href="../it/Mesh_FlipNormals.html" title="Mesh FlipNormals/it">Flip Normals</a>, <a href="../it/Mesh_FillupHoles.html" title="Mesh FillupHoles/it">Fill Holes</a>, <a href="../it/Mesh_FillInteractiveHole.html" title="Mesh FillInteractiveHole/it">Close Holes</a>, <a href="../it/Mesh_AddFacet.html" title="Mesh AddFacet/it">Add Triangle</a>, <a href="../it/Mesh_RemoveComponents.html" title="Mesh RemoveComponents/it">Remove Components</a>, <a href="../it/Mesh_RemoveCompByHand.html" title="Mesh RemoveCompByHand/it">Remove Components Manually</a>, <a href="../it/Mesh_Smoothing.html" title="Mesh Smoothing/it">Smooth</a>, <a href="../it/Mesh_RemeshGmsh.html" title="Mesh RemeshGmsh/it">Refinement</a>, <a href="../it/Mesh_Decimating.html" title="Mesh Decimating/it">Decimate</a>, <a href="../it/Mesh_Scale.html" title="Mesh Scale/it">Scale</a></li></ul>
 <hr>
 <ul><li><b>Boolean:</b> <a href="../it/Mesh_Union.html" title="Mesh Union/it">Union</a>, <a href="../it/Mesh_Intersection.html" title="Mesh Intersection/it">Intersection</a>, <a href="../it/Mesh_Difference.html" title="Mesh Difference/it">Difference</a></li>
-<li><b>Cutting:</b> <a href="../it/Mesh_PolyCut.html" title="Mesh PolyCut/it">Cut mesh</a>, <a href="../it/Mesh_PolyTrim.html" title="Mesh PolyTrim/it">Trim mesh</a>, <a href="../it/Mesh_TrimByPlane.html" title="Mesh TrimByPlane/it">Trim mesh with a plane</a>, <a href="../it/Mesh_SectionByPlane.html" title="Mesh SectionByPlane/it">Create section from mesh and plane</a>, <a href="../it/Mesh_CrossSections.html" title="Mesh CrossSections/it">Cross-sections</a></li>
-<li><b>Components and segments:</b> <a href="../it/Mesh_Merge.html" title="Mesh Merge/it">Merge</a>, <a href="../it/Mesh_SplitComponents.html" title="Mesh SplitComponents/it">Split by components</a>, <a href="../it/Mesh_Segmentation.html" title="Mesh Segmentation/it">Create mesh segments</a>, <a href="../it/Mesh_SegmentationBestFit.html" title="Mesh SegmentationBestFit/it">Create mesh segments from best-fit surfaces</a></li></ul>
+<li><b>Cutting:</b> <a href="../it/Mesh_PolyCut.html" title="Mesh PolyCut/it">Cut</a>, <a href="../it/Mesh_PolyTrim.html" title="Mesh PolyTrim/it">Trim</a>, <a href="../it/Mesh_TrimByPlane.html" title="Mesh TrimByPlane/it">Trim With Plane</a>, <a href="../it/Mesh_SectionByPlane.html" title="Mesh SectionByPlane/it">Section From Plane</a>, <a href="../it/Mesh_CrossSections.html" title="Mesh CrossSections/it">Cross-Sections</a></li>
+<li><b>Components and segmentation:</b> <a href="../it/Mesh_Merge.html" title="Mesh Merge/it">Merge</a>, <a href="../it/Mesh_SplitComponents.html" title="Mesh SplitComponents/it">Split by Components</a>, <a href="../it/Mesh_Segmentation.html" title="Mesh Segmentation/it">Segmentation</a>, <a href="../it/Mesh_SegmentationBestFit.html" title="Mesh SegmentationBestFit/it">Segmentation From Best-Fit Surfaces</a></li></ul>
 <hr>
-<ul><li><b>Analyze:</b> <a href="../it/Mesh_Evaluation.html" title="Mesh Evaluation/it">Evaluate and repair mesh</a>, <a href="../it/Mesh_EvaluateFacet.html" title="Mesh EvaluateFacet/it">Face info</a>, <a href="../it/Mesh_VertexCurvature.html" title="Mesh VertexCurvature/it">Curvature plot</a>, <a href="../it/Mesh_CurvatureInfo.html" title="Mesh CurvatureInfo/it">Curvature info</a>, <a href="../it/Mesh_EvaluateSolid.html" title="Mesh EvaluateSolid/it">Check solid mesh</a>, <a href="../it/Mesh_BoundingBox.html" title="Mesh BoundingBox/it">Boundings info</a></li>
+<ul><li><b>Analyze:</b> <a href="../it/Mesh_Evaluation.html" title="Mesh Evaluation/it">Evaluate and Repair</a>, <a href="../it/Mesh_EvaluateFacet.html" title="Mesh EvaluateFacet/it">Face Info</a>, <a href="../it/Mesh_VertexCurvature.html" title="Mesh VertexCurvature/it">Curvature Plot</a>, <a href="../it/Mesh_CurvatureInfo.html" title="Mesh CurvatureInfo/it">Curvature Info</a>, <a href="../it/Mesh_EvaluateSolid.html" title="Mesh EvaluateSolid/it">Evaluate Solid</a>, <a href="../it/Mesh_BoundingBox.html" title="Mesh BoundingBox/it">Bounding Box Info</a></li>
 <li><b>Additional:</b> <a href="../it/Import_Export_Preferences.html" title="Import Export Preferences/it">Import Export Preferences</a>, <a href="../it/OpenSCAD_Workbench.html" title="OpenSCAD Workbench/it">OpenSCAD Workbench</a>, <a href="../it/Mesh_Scripting.html" title="Mesh Scripting/it">Mesh Scripting</a></li></ul></div>
     </div></div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
@@ -128,35 +126,35 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20250827100017
+Cached time: 20260118125904
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.113 seconds
-Preprocessor visited node count: 326/1000000
-Post&#8208;expand include size: 15144/2097152 bytes
-Template argument size: 4911/2097152 bytes
+CPU time usage: 0.078 seconds
+Real time usage: 0.121 seconds
+Preprocessor visited node count: 325/1000000
+Post&#8208;expand include size: 15028/2097152 bytes
+Template argument size: 4855/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2418/5000000 bytes
+Unstrip post&#8208;expand size: 2423/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.170      1 -total
- 21.53%    4.773      1 Template:Mesh_Tools_navi/it
- 14.98%    3.321      1 Template:Userdocnavi/it
- 14.67%    3.253      2 Template:Docnav/it
- 13.61%    3.017      2 Template:Navigation_menu_2
- 12.95%    2.872      1 Template:GuiCommand/it
-  7.72%    1.712      1 Template:Value
-  6.74%    1.493      1 Template:Code
-  5.56%    1.233      2 Template:Button
-  4.28%    0.948      1 Template:Clear
+100.00%   28.290      1 -total
+ 30.64%    8.668      1 Template:Mesh_Tools_navi/it
+ 15.00%    4.242      1 Template:Userdocnavi/it
+ 12.38%    3.503      2 Template:Navigation_menu_2
+  9.29%    2.628      1 Template:Value
+  8.96%    2.534      1 Template:Code
+  8.83%    2.499      2 Template:Docnav/it
+  8.52%    2.410      1 Template:GuiCommand/it
+  4.45%    1.258      2 Template:Incode
+  4.22%    1.193      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:67373-0!canonical and timestamp 20250827100017 and revision id 1634632. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:67373-0!canonical and timestamp 20260118125903 and revision id 1740501. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
