--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -200,9 +200,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Projection.svg&amp;filetimestamp=20241129200338&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Projection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Projection.html" title="Sketcher Projection">Extern&iacute; projekce</a>: Vytvo&#345;&iacute; hrany projekce vn&#283;j&scaron;&iacute; geometrie. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Intersection.svg&amp;filetimestamp=20241129200334&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Intersection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Intersection.html" title="Sketcher Intersection">Extern&iacute; pr&#367;se&#269;&iacute;k</a>: Vytvo&#345;&iacute; pr&#367;se&#269;&iacute;ky hran vn&#283;j&scaron;&iacute; geometrie s rovinou n&aacute;&#269;rtu. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CarbonCopy.svg&amp;filetimestamp=20240719181043&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CarbonCopy.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CarbonCopy.html" title="Sketcher CarbonCopy">Karbonov&aacute; kopie</a>: Zkop&iacute;ruje ve&scaron;kerou geometrii a omezen&iacute; z jin&eacute;ho n&aacute;&#269;rtu do aktivn&iacute;ho n&aacute;&#269;rtu.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectOrigin.svg&amp;filetimestamp=20240101115659&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectOrigin.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectOrigin.html" title="Sketcher SelectOrigin">Select Origin</a>: Selects the origin of the sketch.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectOrigin.svg&amp;filetimestamp=20240101115659&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectOrigin.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectOrigin.html" title="Sketcher SelectOrigin">Vybrat po&#269;&aacute;tek</a>: Vybere po&#269;&aacute;tek n&aacute;&#269;rtu.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectHorizontalAxis.svg&amp;filetimestamp=20240101115648&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectHorizontalAxis.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectHorizontalAxis.html" title="Sketcher SelectHorizontalAxis">Select Horizontal Axis</a>: Selects the horizontal axis of the sketch.</li></ul>
 </div>
@@ -626,13 +624,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118125852
+Cached time: 20260118125940
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.445 seconds
-Real time usage: 0.760 seconds
-Preprocessor visited node count: 1464/1000000
+CPU time usage: 0.436 seconds
+Real time usage: 0.625 seconds
+Preprocessor visited node count: 1463/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -642,19 +640,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   49.084      1 -total
- 18.91%    9.280      1 Template:Sketcher_Tools_navi/cs
- 16.44%    8.071      1 Template:PropertyView
- 16.22%    7.963      1 Template:Userdocnavi/cs
- 10.45%    5.128      2 Template:Navigation_menu_2
-  8.27%    4.058     34 Template:Version
-  7.54%    3.703      1 Template:Variable
-  5.84%    2.867      8 Template:VersionPlus
-  5.40%    2.653      2 Template:Docnav
-  4.75%    2.331      6 Template:Caption
+100.00%   39.520      1 -total
+ 25.86%   10.219      1 Template:Sketcher_Tools_navi/cs
+ 17.21%    6.803      1 Template:Userdocnavi/cs
+ 13.50%    5.334      2 Template:Navigation_menu_2
+  8.46%    3.344      1 Template:PropertyView
+  8.06%    3.186      2 Template:Docnav
+  6.23%    2.461     34 Template:Version
+  5.79%    2.289     14 Template:KEY
+  5.26%    2.077      5 Template:MenuCommand
+  4.33%    1.713      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118125851 and revision id 1740499. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118125939 and revision id 1740503. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
