--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -201,9 +201,7 @@
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Intersection.svg&amp;filetimestamp=20241129200334&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Intersection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Intersection.html" title="Sketcher Intersection">Extern&iacute; pr&#367;se&#269;&iacute;k</a>: Vytvo&#345;&iacute; pr&#367;se&#269;&iacute;ky hran vn&#283;j&scaron;&iacute; geometrie s rovinou n&aacute;&#269;rtu. <span style="font-size:small;"><a href="../Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></span></li></ul></dd></dl>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_CarbonCopy.svg&amp;filetimestamp=20240719181043&amp;.html" class="mw-file-description"><img src="../File/Sketcher_CarbonCopy.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_CarbonCopy.html" title="Sketcher CarbonCopy">Karbonov&aacute; kopie</a>: Zkop&iacute;ruje ve&scaron;kerou geometrii a omezen&iacute; z jin&eacute;ho n&aacute;&#269;rtu do aktivn&iacute;ho n&aacute;&#269;rtu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectOrigin.svg&amp;filetimestamp=20240101115659&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectOrigin.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectOrigin.html" title="Sketcher SelectOrigin">Vybrat po&#269;&aacute;tek</a>: Vybere po&#269;&aacute;tek n&aacute;&#269;rtu.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectHorizontalAxis.svg&amp;filetimestamp=20240101115648&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectHorizontalAxis.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectHorizontalAxis.html" title="Sketcher SelectHorizontalAxis">Select Horizontal Axis</a>: Selects the horizontal axis of the sketch.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectHorizontalAxis.svg&amp;filetimestamp=20240101115648&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectHorizontalAxis.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectHorizontalAxis.html" title="Sketcher SelectHorizontalAxis">Vybrat horizont&aacute;ln&iacute; osu</a>: Vybere horizont&aacute;ln&iacute; osu n&aacute;&#269;rtu.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectVerticalAxis.svg&amp;filetimestamp=20240101115720&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectVerticalAxis.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectVerticalAxis.html" title="Sketcher SelectVerticalAxis">Select Vertical Axis</a>: Selects the vertical axis of the sketch.</li></ul>
 </div>
@@ -624,13 +622,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118125940
+Cached time: 20260118130013
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.436 seconds
-Real time usage: 0.625 seconds
-Preprocessor visited node count: 1463/1000000
+CPU time usage: 0.503 seconds
+Real time usage: 0.866 seconds
+Preprocessor visited node count: 1462/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -640,19 +638,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.520      1 -total
- 25.86%   10.219      1 Template:Sketcher_Tools_navi/cs
- 17.21%    6.803      1 Template:Userdocnavi/cs
- 13.50%    5.334      2 Template:Navigation_menu_2
-  8.46%    3.344      1 Template:PropertyView
-  8.06%    3.186      2 Template:Docnav
-  6.23%    2.461     34 Template:Version
-  5.79%    2.289     14 Template:KEY
-  5.26%    2.077      5 Template:MenuCommand
-  4.33%    1.713      1 Template:Variable
+100.00%   90.800      1 -total
+ 30.06%   27.298      1 Template:Sketcher_Tools_navi/cs
+ 11.05%   10.037      1 Template:PropertyView
+ 10.92%    9.915      2 Template:Navigation_menu_2
+ 10.44%    9.475      1 Template:Userdocnavi/cs
+ 10.08%    9.156      2 Template:Docnav
+  5.49%    4.981     34 Template:Version
+  4.57%    4.147      1 Template:TOCright
+  4.23%    3.843      6 Template:Caption
+  4.18%    3.794      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118125939 and revision id 1740503. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118130012 and revision id 1740505. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
